examples/kubernetes-nginx-ingress/nginx-ingress/spec/default-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  type: ClusterIP
  selector:
    app: default-http-backend
  ports:
  - name: http
    port: 8088
    targetPort: 8080
    protocol: TCP
